--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: What's going on?
+subtitle:
 ---
+<div class="poster-container">
+    <img src="assets/img/poster.jpeg">
+</div>
